# rig-magi

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/tools/: code_review.rs  mod.rs
