[package]
name = "rig-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git" }
rig-sqlite = { git = "https://github.com/0xPlaygrounds/rig.git" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
